snapshots/serde/test_suite/tests/ui/default-attribute/enum_path.rs.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 9
kind: unit
spaces:
  - name: main
    start_line: 9
    end_line: 9
    kind: function
    spaces: []
    metrics:
      nargs:
        function_args: 0
        closure_args: 0
        function_args_average: 0
        closure_args_average: 0
        total: 0
        value: 0
        average: 0
        function_args_min: 0
        function_args_max: 0
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        value: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 1
        value: 1
        average: 1
        min: 1
        max: 1
        modified:
          sum: 1
          value: 1
          average: 1
          min: 1
          max: 1
      halstead:
        unique_operators: 3
        total_operators: 3
        unique_operands: 1
        total_operands: 1
        length: 4
        estimated_program_length: 4.755
        purity_ratio: 1.189
        vocabulary: 4
        volume: 8
        difficulty: 1.5
        level: 0.667
        effort: 12
        time: 0.667
        bugs: 0.002
      loc:
        sloc: 1
        ploc: 1
        lloc: 0
        cloc: 0
        blank: 0
        sloc_average: 1
        ploc_average: 1
        lloc_average: 0
        cloc_average: 0
        blank_average: 0
        sloc_min: 1
        sloc_max: 1
        cloc_min: 0
        cloc_max: 0
        ploc_min: 1
        ploc_max: 1
        lloc_min: 0
        lloc_max: 0
        blank_min: 0
        blank_max: 0
      nom:
        functions: 1
        closures: 0
        functions_average: 1
        closures_average: 0
        total: 1
        average: 1
        functions_min: 1
        functions_max: 1
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 6
        average: 6
        min: 6
        max: 6
      mi:
        original: 159.957
        sei: 155.17
        visual_studio: 93.542
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        value: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
metrics:
  nargs:
    function_args: 0
    closure_args: 0
    function_args_average: 0
    closure_args_average: 0
    total: 0
    value: 0
    average: 0
    function_args_min: 0
    function_args_max: 0
    closure_args_min: 0
    closure_args_max: 0
  nexits:
    sum: 0
    average: 0
    min: 0
    max: 0
  cognitive:
    sum: 0
    value: 0
    average: 0
    min: 0
    max: 0
  cyclomatic:
    sum: 2
    value: 1
    average: 2
    min: 1
    max: 1
    modified:
      sum: 2
      value: 1
      average: 2
      min: 1
      max: 1
  halstead:
    unique_operators: 12
    total_operators: 17
    unique_operands: 9
    total_operands: 10
    length: 27
    estimated_program_length: 71.549
    purity_ratio: 2.65
    vocabulary: 21
    volume: 118.593
    difficulty: 6.667
    level: 0.15
    effort: 790.617
    time: 43.923
    bugs: 0.029
  loc:
    sloc: 9
    ploc: 7
    lloc: 0
    cloc: 0
    blank: 2
    sloc_average: 4.5
    ploc_average: 3.5
    lloc_average: 0
    cloc_average: 0
    blank_average: 1
    sloc_min: 1
    sloc_max: 9
    cloc_min: 0
    cloc_max: 0
    ploc_min: 1
    ploc_max: 7
    lloc_min: 0
    lloc_max: 0
    blank_min: 0
    blank_max: 2
  nom:
    functions: 1
    closures: 0
    functions_average: 0.5
    closures_average: 0
    total: 1
    average: 0.5
    functions_min: 0
    functions_max: 1
    closures_min: 0
    closures_max: 0
  tokens:
    tokens: 40
    average: 20
    min: 6
    max: 34
  mi:
    original: 110.111
    sei: 83.36
    visual_studio: 64.393
  abc:
    assignments: 0
    branches: 0
    conditions: 0
    magnitude: 0
    value: 0
    assignments_average: 0
    branches_average: 0
    conditions_average: 0
    assignments_min: 0
    assignments_max: 0
    branches_min: 0
    branches_max: 0
    conditions_min: 0
    conditions_max: 0
  wmc:
    class_wmc_sum: 0
    interface_wmc_sum: 0
    total: 0
  npm:
    class_npm_sum: 0
    interface_npm_sum: 0
    class_methods: 0
    interface_methods: 0
    class_coa: 0
    interface_coa: 0
    total: 0
    total_methods: 0
    coa: 0
  npa:
    class_npa_sum: 0
    interface_npa_sum: 0
    class_attributes: 0
    interface_attributes: 0
    class_cda: 0
    interface_cda: 0
    total: 0
    total_attributes: 0
    cda: 0
